--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -28,9 +28,15 @@
     "@routes": "src/api/routes"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "mocha": "^8.3.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "expect": "^26.6.2",
+    "module": "^1.2.5",
+    "supertest": "^6.1.3",
+    "url": "^0.11.0",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
